<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_1f1137"
    android:clickable="true"
    android:focusable="true"
    android:paddingStart="10dp"
    android:paddingTop="2dp"
    android:paddingEnd="10dp"
    android:paddingBottom="2dp">

    <RelativeLayout
        android:id="@+id/imageLayout"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/play"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_action_play"
            android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/checked"
        android:layout_toEndOf="@+id/imageLayout"
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:paddingTop="4dp"
        android:paddingEnd="5dp"
        android:paddingBottom="4dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_regular"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_regular"
            android:maxLines="1"
            android:text="@string/_30_kb"
            android:textColor="@color/color_a8a8a8"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_regular"
            android:maxLines="2"
            android:text="@string/path"
            android:textColor="@color/color_a8a8a8"
            android:textSize="12sp" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/checked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:button="@drawable/bg_checkbox" />

</RelativeLayout>
