<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:navigationIcon="@drawable/ic_toolbar_previous"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextAppearance="@style/textsizetoolbar"
            tools:layout_height="@dimen/_35sdp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_padding"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/im_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/bg_header" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_header_deep_clean" />

                <TextView
                    android:id="@+id/tvNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dip"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/analyzing"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:visibility="invisible" />

            </LinearLayout>

        </RelativeLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/_20sdp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:minHeight="@dimen/_40sdp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_marginRight="@dimen/_15sdp"
                            android:src="@drawable/ic_duplicate_images" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/scan_image_file"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/_13sdp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="@dimen/_21sdp"
                            android:layout_height="@dimen/_21sdp"
                            android:src="@drawable/ic_arrow_right" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/color_554c88" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvVideo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:minHeight="@dimen/_40sdp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_marginRight="@dimen/_15sdp"
                            android:src="@drawable/ic_duplicate_videos" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/scan_video_file"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/_13sdp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="@dimen/_21sdp"
                            android:layout_height="@dimen/_21sdp"
                            android:src="@drawable/ic_arrow_right" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/color_554c88" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvAudio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:minHeight="@dimen/_40sdp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_marginRight="@dimen/_15sdp"
                            android:src="@drawable/ic_duplicate_audios" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/scan_audio_file"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/_13sdp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="@dimen/_21sdp"
                            android:layout_height="@dimen/_21sdp"
                            android:src="@drawable/ic_arrow_right" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/color_554c88" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvDoc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:minHeight="@dimen/_40sdp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_marginRight="@dimen/_15sdp"
                            android:src="@drawable/ic_duplicate_docs" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/scan_doc_file"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/_13sdp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="@dimen/_21sdp"
                            android:layout_height="@dimen/_21sdp"
                            android:src="@drawable/ic_arrow_right" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/color_554c88" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvOther"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:minHeight="@dimen/_40sdp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_marginRight="@dimen/_15sdp"
                            android:src="@drawable/ic_duplicate_all" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/scan_all_file"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/_13sdp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="@dimen/_21sdp"
                            android:layout_height="@dimen/_21sdp"
                            android:src="@drawable/ic_arrow_right" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </LinearLayout>


</RelativeLayout>